# agent-factory-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.bat  setup.command  start.bat  start.command
.agents/: README.md
.agents/skills/architect/: SKILL.md
.agents/skills/architect/agents/: openai.yaml
.agents/skills/architect/references/: design-checklist.md
.agents/skills/developer/: SKILL.md
.agents/skills/developer/agents/: openai.yaml
.agents/skills/developer/references/: delivery-checklist.md
.agents/skills/orchestrator/: SKILL.md
.agents/skills/orchestrator/agents/: openai.yaml
.agents/skills/pm/: SKILL.md
.agents/skills/qa/: SKILL.md
.agents/skills/researcher/: SKILL.md
.agents/skills/security-engineer/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  bootstrap_support.py  config.py  llm_factory.py  main.py  schemas.py
app/agents/: __init__.py  base.py  data_agent.py  reasoning_agent.py  solution_agent.py  validation_agent.py
app/api/: routes.py
app/data/: __init__.py  simulation.py
app/graph/: workflow.py
app/static/: index.html  ui.css  ui.js
app/tools/: __init__.py  anomaly_detection.py  data_loader.py  data_processing.py  oee.py  pdf_report.py  presentation.py  recommendation_rules.py  validation.py
data/: production_sample.csv
docs/: architecture.md  automotive-feature-roadmap.md
scripts/: bootstrap.py  run_local.py
tests/: conftest.py  test_api.py  test_bootstrap_support.py  test_data_processing.py  test_llm_factory.py  test_oee.py  test_workflow.py
(+9 files in other folders)
