[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-analytics-multi-agent"
version = "0.1.0"
description = "Production-style LangChain and LangGraph manufacturing analytics assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=0.3,<1.0",
    "langgraph>=0.2,<2.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.7,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "UP"]

